--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-Year-New-Me</title>
     <link rel="stylesheet" href="styles/new-me.css">
+    <script src="https://kit.fontawesome.com/2db3861d8a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +20,23 @@
 
     </header>
     <main>
+        <!-- my failure -->
+        <section class="failure">
+            <div class="failure-img">
+                <img src="images/person.png" alt="">
+
+            </div>
+            <div class="failure-description">
+                <h2 class="failure-title">My failures of previous year</h2>
+                <p class="failure-descriptionp">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p class="failure-point"><i class="fa-sharp fa-solid fa-square-check"></i> Contrary to popular belief, is not simply.</p>
+                <p class="failure-point"><i class="fa-sharp fa-solid fa-square-check"></i> Contrary to popular belief.</p>
+                <p class="failure-point"><i class="fa-sharp fa-solid fa-square-check"></i> Contrary to popular , is not simply.</p>
+                <p class="failure-point"><i class="fa-sharp fa-solid fa-square-check"></i> Contrary to popular belief, is not simply.</p>
+                <p class="failure-point"><i class="fa-sharp fa-solid fa-square-check"></i> Contrary to popular simply.</p>
+
+            </div>
+        </section>
 
     </main>
     <footer>
