--- a/index.html
+++ b/index.html
@@ -37,6 +37,37 @@
 
             </div>
         </section>
+        <!-- plan section -->
+        <section class="plan">
+            <h2 class="plan-heading">My Plans</h2>
+        <div class="plan-contain">
+            <div>
+                <img  class="plan-img" src="images/icons/web.png" alt="">
+                <h3 class="plan-title">Web Development</h3>
+                <p class="plan-description">I want to start </p>
+
+            </div>
+            <div>
+                <img class="plan-img" src="images/icons/js.png" alt="">
+                <h3 class="plan-title"> Javascript</h3>
+                <p class="plan-description">I wnt to learn</p>
+
+            </div>
+            <div>
+                <img class="plan-img" src="images/icons/smoke.png" alt="">
+                <h3 class="plan-title">Smoking Habit</h3>
+                <p class="plan-description">I want to end</p>
+
+            </div>
+            <div>
+                <img src="images/icons/ecom.png" alt="" class="plan-img">
+                <h3 class="plan-title">E-commerce</h3>
+                <p class="plan-description">I want to develop</p>
+
+
+            </div>
+        </div>
+        </section>
 
     </main>
     <footer>
