--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div>
                 <img class="plan-img" src="images/icons/js.png" alt="">
                 <h3 class="plan-title"> Javascript</h3>
-                <p class="plan-description">I wnt to learn</p>
+                <p class="plan-description">I want to learn</p>
 
             </div>
             <div>
@@ -67,6 +67,23 @@
 
             </div>
         </div>
+        </section>
+        <!-- success -->
+        <section class="success">
+                <div>
+                    <h2 class="success-title">Failure is the key to Success</h2>
+                    <p class="success-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti soluta provident unde repudiandae necessitatibus, esse nulla harum reprehenderit quae nesciunt nemo ipsam sequi porro incidunt placeat quaerat ex, reiciendis dolorum?</p>
+                    <p class="success-pont"><i class="fa-solid fa-circle-check"></i> Be attentive.</p>
+                    <p class="success-pont"><i class="fa-solid fa-circle-check"></i> Be committed.</p>
+                    <p class="success-pont"><i class="fa-solid fa-circle-check"></i> Learn from the journey.</p>
+                    <p class="success-pont"><i class="fa-solid fa-circle-check"></i> Have fun along the way</p>
+                    <p class="success-pont"><i class="fa-solid fa-circle-check"></i> Think positively</p>
+
+                </div>
+                <div>
+                    <img  class="success-img" src="images/images.png" alt="">
+
+                </div>
         </section>
 
     </main>
