--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
 
                 </div>
         </section>
+        <!-- positive -->
+        <section class="positive">
+        <h3 class="positive-title">Always keep a positive mindset</h3>
+        <button class="bttn">Call Now</button>
+    </section>
 
     </main>
     <footer>
