--- a/index.html
+++ b/index.html
@@ -92,7 +92,25 @@
     </section>
 
     </main>
-    <footer>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="future">
+            <h3 class="future-title">Future</h3>
+            <p class="future-des-one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam id commodi deleniti aliquam natus ullam reprehenderit, ea accusamus qui dolorem sint. Perspiciatis commodi animi incidunt ipsum illo sit aliquam nobis.</p>
+            <p class="future des-two">Email:rabiul120158@gmail.com</p>
+            <p class="future-des-three">Phone:Thats up to you</p>
+            <img src="images/icons/fb.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/youtube.png" alt="">
+
+
+        </div>
+        <div class="input">
+            <h3 class="future-title">Subscribe</h3>
+            <input type="text" placeholder="Enter you Email" class="email">
+            <button class="button">Subscribe</button>
+
+        </div>
 
     </footer>
     
